...
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHorizontal_bias="0.214"
        app:layout_constraintVertical_bias="0.882" />

    <GridView
        android:id="@+id/song_selection_grid"
        android:layout_width="305dp"
        android:layout_height="382dp"
        android:numColumns="4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.506"
        app:layout_constraintLeft_toLeftOf="parent"
...
